
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct msg {int type; } ;
__attribute__((used)) static bool
redis_arg1(struct msg *r)
{
    switch (r->type) {
    case 146:
    case 145:
    case 136:
    case 135:

    case 148:
    case 147:
    case 144:
    case 143:
    case 140:
    case 139:
    case 132:

    case 142:
    case 141:

    case 138:
    case 137:
    case 134:
    case 133:

    case 131:

    case 130:
    case 129:
    case 128:
        return 1;

    default:
        break;
    }

    return 0;
}
